--- a/css/styles.css
+++ b/css/styles.css
@@ -25,9 +25,12 @@ body {
     color: var(--color-body);
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     color: var(--color-headings);
     margin-bottom: 1rem;
+    line-height: 1.1;
 }
 
 h1 {
@@ -652,7 +655,7 @@ a {
     }
 
     .nav__list {
-        width: auto ;
+        width: auto;
         display: flex;
         font-size: 1.6rem;
         max-height: 100%;
@@ -660,7 +663,34 @@ a {
     }
 
     .nav__item {
-        border: 0;
+        border: 0; 
     }
 }
 
+/* Hero */
+.hero {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+}
+
+.hero__tagline {
+    font-size: 2rem;
+    color: #bcb9cb;
+    letter-spacing: 1px;
+    margin: 2rem 0 5rem;
+}
+
+.hero__image {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .hero {
+        padding-top: 0;
+    }
+
+    .hero__content {
+        text-align: left;
+        align-self: center;
+    }
+    
+}
