--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ html {
 
 body {
     font-family: Inter, Arial, Helvetica, sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     line-height: 1.5;
     color: var(--color-body);
 }
@@ -48,7 +48,8 @@ h2 {
 
 h3 {
     font-size: 3rem;
-    font-weight: 500;
+    font-weight: 600;
+    line-height: 1.3;
 }
 
 p {
@@ -604,7 +605,7 @@ a {
 
 /* Blocks */
 .block {
-    --padding-vertical: 6rem;
+    --padding-vertical: 5rem;
     padding: var(--padding-vertical) 2rem;
 }
 
@@ -886,3 +887,8 @@ a {
         font-size: 1.6rem;
     }
 }
+
+/* Sign-up Callout */
+.callout-signup {
+    transform: translateY(5rem);
+  }
