--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,10 @@ html {
     font-size: 62.5%;
 }
 
+img {
+    width: 100%;
+}
+
 body {
     font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 2rem;
@@ -39,7 +43,7 @@ h3 {
 }
 
 h1 {
-    font-size: 7rem;
+    font-size: 6rem;
 }
 
 h2 {
@@ -47,7 +51,7 @@ h2 {
 }
 
 h3 {
-    font-size: 3rem;
+    font-size: 2.8rem;
     font-weight: 600;
     line-height: 1.3;
 }
@@ -320,7 +324,7 @@ a {
 
 .card__header,
 .card__body {
-    padding: 2rem 3rem;
+    padding: 2rem 7%;
 }
 
 .card--primary .card__header {
@@ -354,11 +358,11 @@ a {
 }
 
 .plan__price {
-    font-size: 6rem;
+    font-size: 5rem;
 }
 
 .plan__billing-cycle {
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-weight: 300;
     opacity: 0.8;
     margin-right: 1rem;
@@ -373,10 +377,6 @@ a {
 
 .plan .list__item {
     margin-bottom: 2rem;
-}
-
-.plan--popular {
-    transform: scale(1.1);
 }
 
 .plan--popular .card__header {
@@ -401,6 +401,9 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+    .plan--popular {
+        transform: scale(1.1);
+    }
     .plan__name {
         font-size: 1.4rem;
     }
@@ -412,6 +415,9 @@ a {
     .plan__billing-cycle {
         font-size: 1.6rem;
     }
+    .plan__description {
+        font-size: 1.7rem;
+      }
 }
 
 /* Media */
@@ -449,15 +455,15 @@ a {
 }
 
 .quote__author {
-    font-size: 3rem;
+    font-size: 2rem;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     margin-bottom: 0;
 }
 
 .quote__organization {
     color: var(--color-headings);
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-style: normal;
     opacity: 0.4;
 }
@@ -503,13 +509,14 @@ a {
     padding: 3rem;
 }
 
+.testimonial .quote {
+    margin: 2rem 0;
+    font-size: 110%;
+  }
+
 .testimonial__image {
     position: relative;
-    margin: 1rem;
-}
-
-.testimonial__image > img {
-    width: 100%;
+    margin: 0 3rem;
 }
 
 .testimonial__image > .icon-container {
@@ -519,12 +526,13 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-    .testimonial .quote,
-    .testimonial .quote__author {
-        font-size: 2.4rem;
-    }
+    .testimonial__image {
+        margin: 0;
+      }
 
     .testimonial .quote {
+        margin: 5rem 0 0 6rem;
+        font-size: 120%;
         margin-left: 6rem;
     }
 }
@@ -583,7 +591,7 @@ a {
 }
 
 .collapsible__chevron {
-    transform:rotate(-90deg);
+    transform: rotate(-90deg);
     transition: transform 0.3s;
 }
 
@@ -630,12 +638,12 @@ a {
 }
 
 .block--skewed-right {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
     padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
 .block--skewed-left {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
     padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
@@ -650,7 +658,7 @@ a {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 0 1rem;
+    padding: 1rem;
     align-items: center;
 }
 
@@ -662,6 +670,10 @@ a {
 .nav__item {
     padding: 0.5rem 2rem;
     border-bottom: 1px solid #222;
+}
+
+.nav__item:last-of-type {
+    border-bottom: none;
 }
 
 .nav__item>a {
@@ -687,6 +699,7 @@ a {
 
 .nav__brand {
     transform: translateY(5px);
+    width: 150px;
 }
 
 @media screen and (min-width: 768px) {
@@ -715,20 +728,11 @@ a {
     margin: 2rem 0 5rem;
 }
 
-.hero__image {
-    width: 100%;
-}
-
 @media screen and (min-width: 768px) {
-    .hero {
-        padding-top: 0;
-    }
-
     .hero__content {
         text-align: left;
         align-self: center;
     }
-    
 }
 
 /* Domain Block */
@@ -774,15 +778,11 @@ a {
 }
 
 .feature:first-of-type {
-    margin-top: 0;
+    margin-top: 6rem;
 }
 
 .feature__heading {
     margin: 1rem 0;
-}
-
-.feature__image {
-    width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -792,10 +792,6 @@ a {
 }
 
 /* Showcase Block */
-.block-showcase__image > img {
-    width: 100%;
-}
-
 @media screen and (min-width: 768px) {
     .block-showcase .grid {
         grid-template-columns: 50% 50%;
@@ -814,6 +810,7 @@ a {
 /* Footer */
 .footer {
     background: #232323;
+    padding-top: 10rem;
 }
 
 .footer a {
@@ -837,6 +834,8 @@ a {
 .footer__heading {
     text-transform: uppercase; 
     font-weight: 600;
+    font-size: 2.5rem;
+    line-height: 1.5;
 }
 
 .footer__brand {
@@ -845,8 +844,6 @@ a {
 }
 
 .footer__brand img {
-    /* TODO: Consider refactoring this and applying it to all images. */
-    width: 100%;
     max-width: 230px;
 }
 
